# Lab26-Build-MCP-Server_2A202600417-PhamMinhKhang

./: Makefile  PLAN.md  README.md  lab26.md  main.py  pyproject.toml
src/mcp_server/: __init__.py  auth.py  database.py  server.py
tests/: test_tools.py
