[project]
name = "lab26-mcp-server"
version = "0.1.0"
description = "Lab 26 MCP server for products database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.0",
  "aiosqlite>=0.20",
  "starlette>=0.40",
  "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
]

[project.scripts]
mcp-server = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
